<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="12dp"
    android:layout_marginHorizontal="8dp"
    card_view:cardCornerRadius="12dp"
    card_view:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/txtDia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dia_lunes"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="#0D1B54" />

        <TextView
            android:id="@+id/txtHorario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/horario_1800_2100"
            android:textColor="#000000"
            android:textSize="14sp"
            android:layout_marginTop="4dp"/>

        <TextView
            android:id="@+id/txtMateria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/materia_programacion_iii"
            android:textColor="#000000"
            android:textSize="14sp"
            android:layout_marginTop="2dp"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>
