<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="12dp"
    card_view:cardCornerRadius="12dp"
    card_view:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- CABECERA COLOR -->
        <TextView
            android:id="@+id/txtTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:text="@string/vencimiento_titulo_asignatura"
            android:padding="8dp"
            android:background="@color/header_color_default" />

        <!-- CUERPO BLANCO -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:id="@+id/txtVencimientos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vencimientos_titulo" />

            <TextView
                android:id="@+id/txtTp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vencimiento_tp" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>


